[package]
name = "indico-md-wasm"
version = "0.1.0"
authors = ["Indico Team <indico-team@cern.ch>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.113"
js-sys = "^0.3"
indico-comrak = { path = "../indico-comrak" }
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.228", features = ["derive"] }
tsify = { version = "0.5.6", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.63"
